--- a/scss/_quienes.scss
+++ b/scss/_quienes.scss
@@ -31,7 +31,7 @@
     box-sizing: border-box;
     transition: all .5s;
     &:hover{
-        transform: scale(1.12);
+        transform: scale(1.04);
         border: .2rem solid #080807;
         box-sizing: border-box;
     }
@@ -59,6 +59,11 @@
             max-width: none;
             width: 90%;
         }
+    }
+    .img-fluid:hover{
+        transform: none;
+        transform: none;
+        border: .1rem solid #e99f17;
     }
     .ubicacion {
         flex-direction: column;
