--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-body: #35879b;
+$color-body: #3fa1b8;
 $color-secciones: rgb(16, 131, 160);
 $color-principal:#e99f17;
 $color-headernav : linear-gradient(to top, #e99f17,#eaee1a );
@@ -65,7 +65,7 @@ $tarjetas:(
 
 @mixin formulario ($col-grilla,$colo-font,$col-boton) {
     .input-group{
-        width: 60vh;
+        width: 70vh;
         padding: .5rem 0;
         &-text{
             width: 5rem;
