--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -9,8 +9,8 @@
     flex-direction: column;
     color: $color-texto-llama;
     & img{
-        width: auto;
-        height: 18rem;
+        width: 90%;
+        height: 17rem;
         border: .1rem solid #023047;
         border-radius: .3rem;
         box-sizing: border-box;
