--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -83,7 +83,7 @@
 }
 .cursos {
     background-color: $color-secciones;
-    padding-left: $si-padd;
+    padding-left: .7rem;
     span{
         color: $color-texto-llama;
     }
