--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$color-body: #3fa1b8;
+$color-body: linear-gradient(to left,#8ab2d3,#298ac2 100%);
 $color-secciones: rgb(16, 131, 160);
 $color-principal:#e99f17;
 $color-headernav : linear-gradient(to top, #e99f17,#eaee1a );
