--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -4,6 +4,6 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 main {
-    background-color: $color-body;
-    padding-left: .2rem;
+    background: $color-body;
+    padding-left: $si-padd;
 }
