--- a/scss/_header-nav.scss
+++ b/scss/_header-nav.scss
@@ -57,15 +57,9 @@ header {
 .footer {
     height: 12vh;
     background-image: $color-headernav;
-    padding: 0 .7rem;
+    padding: 0 .2rem;
     display: flex;
     justify-content:space-between;
-
-    &__copyright{
-        font-size: .8rem;
-        text-align: center;
-        line-height: 12vh;
-    }
     &__iconos{
         display: flex;
         line-height: 12vh;
@@ -78,11 +72,23 @@ header {
     }
     &__iconos__lista__listado{
         list-style: none;
-        margin-left: 25%;
+        margin-left: 20%;
     }
     &__iconos__lista__listado i{
         font-size: 4vh;
         color: #050505; 
+    }
+    &__volver{
+        a{
+            font-size: 1.3rem;
+            text-decoration: none;
+            color: $color-secciones;
+        }
+    }
+    &__copyright{
+        font-size: .8rem;
+        text-align: center;
+        line-height: 12vh;
     }
 }
 
@@ -153,5 +159,8 @@ header {
     }
     .navbar-toggler{
         font-size: .5rem;
+    }
+    .footer__volver a{
+        font-size: .8rem;
     }
 }
